# snake_arm_ctrl

./: README.md
doc/: 总体设计说明书.md
doc/SISL B样条库/: SISL库.g2文件格式说明.md  sisl lib.rar
src/inverse_kinematic_ctrl/: CMakeLists.txt  package.xml
src/inverse_kinematic_ctrl/config/: PathCurve_CtrlPoints.g2  PathCurve_CtrlPoints_JointNum_is_30.g2  inverse_kinematic_ctrl.rviz  inverse_kinematic_ctrl.yaml
src/inverse_kinematic_ctrl/doc/: 柔性机械臂_逆运动学规划功能包_概要设计说明书.md
src/inverse_kinematic_ctrl/include/: inverse_kinematic_ctrl.h
src/inverse_kinematic_ctrl/launch/: inverse_kinematic_ctrl.launch
src/inverse_kinematic_ctrl/src/: inverse_kinematic_ctrl.cpp  inverse_kinematic_ctrl_node.cpp
src/pos_kinematic_ctrl/: CMakeLists.txt  package.xml
src/pos_kinematic_ctrl/config/: motor_commu.yaml  motor_zero_savefile.txt  pos_kinematic_ctrl.yaml  rviz_cfg.rviz  serial_commu.yaml
src/pos_kinematic_ctrl/doc/: 柔性机械臂_正运动学控制功能包_概要设计说明书.md
src/pos_kinematic_ctrl/include/: common_define.h  common_function.h  controlcan.h  motor_commu.h  pos_kinematic_ctrl.h  serial_commu.h
src/pos_kinematic_ctrl/launch/: pos_kinematic.launch
src/pos_kinematic_ctrl/lib/controlcan/: ubuntu命令.txt
src/pos_kinematic_ctrl/meshes/: model_base.STL  model_env.STL
src/pos_kinematic_ctrl/src/: common_function.cpp  motor_commu.cpp  pos_kinematic_ctrl.cpp  pos_kinematic_ctrl_node.cpp  serial_commu.cpp  workspace_analysis.cpp
src/pos_kinematic_ctrl/urdf/: model_base.urdf  model_env.urdf
src/snake_arm/: CMakeLists.txt  package.xml
src/snake_arm/config/: rosconsole.config  snake_arm.rviz
src/snake_arm/launch/: snake_arm_motion.launch
src/snake_arm/src/: poses_array_pub.cpp
src/snake_arm_msg/: CMakeLists.txt  package.xml
src/snake_arm_msg/doc/: 详细设计说明书.md
src/snake_arm_msg/msg/: JointAngle.msg  JointsAngle.msg
src/snake_arm_msg/srv/: DoubleReq.srv  EndPoseGo.srv  JointsAngleGo.srv
src/snake_arm_visual/: CMakeLists.txt  package.xml
src/snake_arm_visual/config/: EndposeError.txt  snake_arm_visual.rviz  snake_arm_visual.yaml  snake_visual_servo.yaml
src/snake_arm_visual/data/default/: capture_1.pcd  capture_2.pcd  capture_3.pcd  capture_4.pcd  capture_5.pcd  capture_pose.txt
src/snake_arm_visual/doc/: README.md
src/snake_arm_visual/include/: conditional_euclidean_clustering_my.h  conditional_euclidean_clustering_my.hpp  snake_arm_visual.h  snake_visual_servo.h
src/snake_arm_visual/launch/: snake_arm_visual.launch  start_camera.launch
src/snake_arm_visual/src/: conditional_euclidean_clustering_my.cpp  snake_arm_visual.cpp  snake_arm_visual_node.cpp  snake_visual_servo.cpp
src/snake_arm_visual/urdf/: d435i_camera.urdf.xacro
src/snake_base_ctrl/: CMakeLists.txt
src/snake_base_ctrl/config/: base_posi_savefile.txt  snake_base_ctrl.yaml
src/snake_base_ctrl/doc/: README.md
